fix: made container span across page on mobile screen - v2

--- a/styles/general.css
+++ b/styles/general.css
@@ -383,10 +383,6 @@ main,
   margin: 0 auto;
 }
 @media (max-width: 900px) {
-  section,
-  main {
-    max-width: 100%;
-  }
   .sub-page-header {
     margin-top: 10px;
     padding: 5rem;
@@ -414,7 +410,7 @@ main,
   }
   section,
   main {
-    max-width: 96%;
+    max-width: 100%;
     padding: 0 10px;
   }
   .footer-main {
